corrigido bug dark mode

--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,7 @@
 /* Estilos globais */
-
 * {
     box-sizing: border-box;
+    color-scheme: light dark;
 }
 
 input[type="number"]::-webkit-inner-spin-button,
@@ -17,6 +17,7 @@ input[type="number"] {
 html {
     scroll-behavior: smooth;
     font-family: "Readex Pro", sans-serif;
+    color-scheme: light dark;
 }
 
 body {
